Updating the swagger and the entity controllers
